--- a/src/markdown-styles.css
+++ b/src/markdown-styles.css
@@ -105,3 +105,92 @@
 
 /* Add more styles as needed for other Markdown elements */
 
+/* Lists */
+.bot-content-container ul,
+.bot-content-container ol {
+  margin-bottom: 1em;
+  padding-left: 2em;
+}
+
+.bot-content-container li {
+  margin-bottom: 0.5em;
+  list-style-type: disc; /* Style for unordered lists, use 'circle' or 'square' if desired */
+}
+
+.bot-content-container ol {
+  list-style-type: decimal; /* Style for ordered lists */
+}
+
+/* Nested lists */
+.bot-content-container ul ul,
+.bot-content-container ol ul,
+.bot-content-container ul ol,
+.bot-content-container ol ol {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  padding-left: 2em;
+}
+
+/* Links */
+.bot-content-container a {
+  color: #0066cc;
+  text-decoration: underline;
+}
+
+.bot-content-container a:hover {
+  color: #004080;
+}
+
+/* Tables */
+.bot-content-container table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 1em;
+}
+
+.bot-content-container th,
+.bot-content-container td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+.bot-content-container th {
+  background-color: #f2f2f2;
+}
+
+/* Task Lists */
+.bot-content-container .task-list-item {
+  list-style-type: none;
+}
+
+.bot-content-container .task-list-item input {
+  margin-right: 5px;
+}
+
+/* Abbreviations */
+.bot-content-container abbr {
+  text-decoration: underline;
+  cursor: help;
+}
+
+/* Footnotes */
+.bot-content-container .footnotes {
+  margin-top: 1em;
+  border-top: 1px solid #ccc;
+  padding-top: 1em;
+}
+
+.bot-content-container .footnote-ref {
+  font-size: 0.8em;
+}
+
+/* Definition Lists */
+.bot-content-container dl {
+  margin-bottom: 1em;
+}
+
+.bot-content-container dt {
+  font-weight: bold;
+}
+
